# AutoVPS

./: .gitignore  Cargo.toml  LICENSE  README.md  dist-workspace.toml  release.toml
.github/workflows/: cut-release.yml  release.yml
src/: config.rs  main.rs  script.rs  shell.rs  ssh.rs  utils.rs
